[tool.poetry]
name = "gymtrack"
version = "0.1.0"
description = ""
authors = ["Ross <ross@rossmasters.com>"]

[tool.poetry.dependencies]
python = "^3.8"
slimit = "^0.8.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
